# hs-unac-bindings

./: makefile  readme.md  unac-bindings.cabal
.github/workflows/: haskell.yml
src/Text/: Unac.hs
t/: Main.hs
