cabal-version:      3.4
name:               unac-bindings
version:            0.1.0.0
synopsis:           Bindings for libunac(3)
description:        Bindings for libunac(3)
license:            Unlicense
license-file:       LICENSE
author:             Bruno Dias
maintainer:         dias.h.bruno@gmail.com
category:           Text
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Text.Unac
    -- other-modules:
    -- other-extensions:
    extra-libraries:  unac
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite UnacBindingsTests
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   t
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        hspec,
        unac-bindings